--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
     ></script>
 
     <header>
-      <nav class="navbar navbar-expand-lg one">
+      <nav class="navbar navbar-expand-lg navbar-one">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand img-text" href="#">
             <img
-              src="./media/airplane-fill.svg"
+              src="./media/logo4.png"
               alt=""
-              width="30"
-              height="24"
-              class="d-inline-block align-text-top"
+              width=""
+              height=""
+              class="d-inline-block align-text"
             />
             Performance
           </a>
